--- a/healthcare_app/templates/dashboard.html
+++ b/healthcare_app/templates/dashboard.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -104,12 +107,15 @@
     <nav>
         <div class="container">
             <div>
-                <a href="{% url 'doctor' %}">My Website</a>
+                <a href="{% url 'dashboard' %}">Home</a>
             </div>
             <div>
-                <a href="{% url 'doctor' %}">My Profile</a>
-                <a href="{% url 'addblog' %}">Add Blog</a>
-                <a href="{% url 'myblogs' %}">My Blogs</a>
+                <a href="{% url 'dashboard' %}">My Profile</a>
+                {% if user.is_doctor %}
+                    <a href="{% url 'addblog' %}">Add Blog</a>
+                    <a href="{% url 'myblogs' %}">My Blogs</a>
+                    <a href="{% url 'mydrafts' %}">My Drafts</a>
+                {% endif %}
                 <a href="{% url 'blogs' %}">Blogs</a>
                 <a href="{% url 'logout' %}" class="logout-btn">Logout</a>
             </div>
@@ -122,7 +128,11 @@
         <div class="profile">
             <img src="{{ user.image.url }}" alt="{{ user.first_name }}">
             <div class="profile-details">
-                <h2>Doctor</h2>
+                {% if user.is_doctor %}
+                    <h2>Doctor</h2>
+                {% else %}
+                    <h2>Patient</h2>
+                {% endif %}
                 <div class="info">
                     <p><strong>Name:</strong> {{ user.first_name }} {{ user.last_name }}</p>
                     <p><strong>Username:</strong> {{ user.username }}</p>
@@ -134,3 +144,4 @@
     </div>
 </body>
 </html>
+{% endblock %}
